Node Class added

--- a/FolkerKinzel.Tsltn.Models/FolkerKinzel.Tsltn.Models.csproj
+++ b/FolkerKinzel.Tsltn.Models/FolkerKinzel.Tsltn.Models.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <Compile Remove="HashService.cs" />
+    <Compile Remove="Intls\ManualTranslation.cs" />
+    <Compile Remove="Intls\Translation.cs" />
   </ItemGroup>
 
   <ItemGroup>
