--- a/FolkerKinzel.Tsltn.Models/FolkerKinzel.Tsltn.Models.csproj
+++ b/FolkerKinzel.Tsltn.Models/FolkerKinzel.Tsltn.Models.csproj
@@ -1,26 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
+    <FileVersion>1.0.5.0</FileVersion>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Remove="HashService.cs" />
     <Compile Remove="Intls\ManualTranslation.cs" />
     <Compile Remove="Intls\Translation.cs" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\..\FolkerKinzel.Strings\FolkerKinzel.Strings\FolkerKinzel.Strings.csproj" />
+    <Reference Include="FolkerKinzel.Strings">
+      <HintPath>deps\netstandard2.1\FolkerKinzel.Strings.dll</HintPath>
+    </Reference>
   </ItemGroup>
-
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="if $(ConfigurationName) == Release if '$(TargetFramework)' == 'netcoreapp3.1' dotnet $(SolutionDir)IncVersion\IncVersion.dll $(ProjectDir)$(ProjectFileName)" />
+  </Target>
 </Project>
