--- a/FolkerKinzel.Tsltn.Controllers/FolkerKinzel.Tsltn.Controllers.csproj
+++ b/FolkerKinzel.Tsltn.Controllers/FolkerKinzel.Tsltn.Controllers.csproj
@@ -9,6 +9,8 @@
 
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
+    <FileVersion>1.1.0.0</FileVersion>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
