--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,6 @@ dotnet_diagnostic.CA1707.severity = none
 
 # IDE1006: Benennungsstile
 dotnet_diagnostic.IDE1006.severity = none
+
+# CA1062: Argumente von öffentlichen Methoden validieren
+dotnet_diagnostic.CA1062.severity = suggestion
