--- a/FolkerKinzel.Tsltn.Controllers/FolkerKinzel.Tsltn.Controllers.csproj
+++ b/FolkerKinzel.Tsltn.Controllers/FolkerKinzel.Tsltn.Controllers.csproj
@@ -6,19 +6,13 @@
     <NeutralLanguage>en</NeutralLanguage>
     <Copyright>Copyright © 2020 Folker Kinzel</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
     <FileVersion>1.2.0.0</FileVersion>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FolkerKinzel.Tsltn.Models\FolkerKinzel.Tsltn.Models.csproj" />
