--- a/FolkerKinzel.Tsltn.Models.Tests/FolkerKinzel.Tsltn.Models.Tests.csproj
+++ b/FolkerKinzel.Tsltn.Models.Tests/FolkerKinzel.Tsltn.Models.Tests.csproj
@@ -7,6 +7,8 @@
     <IsPackable>false</IsPackable>
     <RootNamespace>FolkerKinzel.Tsltn.Models.Tests</RootNamespace>
     <AssemblyName>FolkerKinzel.Tsltn.Models.Tests</AssemblyName>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
     <PackageReference Include="coverlet.collector" Version="1.3.0">
