--- a/Tsltn/Tsltn.csproj
+++ b/Tsltn/Tsltn.csproj
@@ -8,10 +8,12 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
-    <FileVersion>2.0.3.0</FileVersion>
+    <FileVersion>2.0.4.0</FileVersion>
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <ApplicationIcon>pics\Tsltn.ico</ApplicationIcon>
     <PublishReadyToRunShowWarnings>true</PublishReadyToRunShowWarnings>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Binaries\**" />
@@ -69,11 +71,7 @@
     <None Include="Resources\Help.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FolkerKinzel.RecentFiles.WPF" Version="1.3.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="FolkerKinzel.RecentFiles.WPF" Version="1.3.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FolkerKinzel.Tsltn.Controllers\FolkerKinzel.Tsltn.Controllers.csproj" />
