--- a/.editorconfig
+++ b/.editorconfig
@@ -8,3 +8,60 @@ dotnet_diagnostic.IDE1006.severity = none
 
 # CA1062: Argumente von öffentlichen Methoden validieren
 dotnet_diagnostic.CA1062.severity = suggestion
+
+# CA1812: Nicht instanziierte interne Klassen vermeiden
+dotnet_diagnostic.CA1812.severity = suggestion
+
+# CA3077: Unsichere Verarbeitung in API-Design, XmlDocument und XmlTextReader
+dotnet_diagnostic.CA3077.severity = suggestion
+
+# CA3076: Unsichere XSLT-Skriptverarbeitung.
+dotnet_diagnostic.CA3076.severity = suggestion
+
+# CA1309: Ordinalzeichenfolgenvergleich verwenden
+dotnet_diagnostic.CA1309.severity = suggestion
+
+# CA1200: Verwendung von cref-Tags mit einem Präfix vermeiden
+dotnet_diagnostic.CA1200.severity = suggestion
+
+# CA1001: Typen mit eigenen verwerfbaren Feldern müssen verwerfbar sein
+dotnet_diagnostic.CA1001.severity = warning
+
+# CA1065: Keine Ausnahmen an unerwarteten Speicherorten auslösen
+dotnet_diagnostic.CA1065.severity = suggestion
+
+# CA1012: Abstrakte Typen dürfen keine öffentlichen Konstruktoren enthalten
+dotnet_diagnostic.CA1012.severity = suggestion
+
+# CA1060: Pinvokes in native Methodenklasse verschieben
+dotnet_diagnostic.CA1060.severity = suggestion
+
+# CA1303: Literale nicht als lokalisierte Parameter übergeben
+dotnet_diagnostic.CA1303.severity = suggestion
+
+# CA1304: CultureInfo angeben
+dotnet_diagnostic.CA1304.severity = suggestion
+
+# CA1305: IFormatProvider angeben
+dotnet_diagnostic.CA1305.severity = suggestion
+
+# CA1307: "StringComparison" zur Verdeutlichung angeben
+dotnet_diagnostic.CA1307.severity = suggestion
+
+# CA1310: "StringComparison" für Richtigkeit angeben
+dotnet_diagnostic.CA1310.severity = suggestion
+
+# CA1308: Zeichenfolgen in Großbuchstaben normalisieren
+dotnet_diagnostic.CA1308.severity = suggestion
+
+# CA1724: Typnamen dürfen nicht mit Namespaces übereinstimmen
+dotnet_diagnostic.CA1724.severity = suggestion
+
+# CA1801: Nicht verwendete Parameter überprüfen
+dotnet_diagnostic.CA1801.severity = suggestion
+
+# CA1802: Nach Möglichkeit Literale verwenden
+dotnet_diagnostic.CA1802.severity = suggestion
+
+# CA2007: Aufruf von "ConfigureAwait" für erwarteten Task erwägen
+dotnet_diagnostic.CA2007.severity = suggestion
