--- a/FolkerKinzel.Tsltn.Models.Tests/FolkerKinzel.Tsltn.Models.Tests.csproj
+++ b/FolkerKinzel.Tsltn.Models.Tests/FolkerKinzel.Tsltn.Models.Tests.csproj
@@ -9,6 +9,8 @@
     <AssemblyName>FolkerKinzel.Tsltn.Models.Tests</AssemblyName>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <NeutralLanguage>en</NeutralLanguage>
+
   </PropertyGroup>
 
   <ItemGroup>
