--- a/FolkerKinzel.XmlFragmentsTests/FolkerKinzel.XmlFragmentsTests.csproj
+++ b/FolkerKinzel.XmlFragmentsTests/FolkerKinzel.XmlFragmentsTests.csproj
@@ -7,6 +7,7 @@
     <IsPackable>false</IsPackable>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
   <ItemGroup>
