--- a/FolkerKinzel.Tsltn.Models/FolkerKinzel.Tsltn.Models.csproj
+++ b/FolkerKinzel.Tsltn.Models/FolkerKinzel.Tsltn.Models.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="HashService.cs" />
+    <Compile Remove="IFileWatcher.cs" />
     <Compile Remove="Intls\ManualTranslation.cs" />
     <Compile Remove="Intls\Translation.cs" />
   </ItemGroup>
