--- a/FolkerKinzel.Tsltn.Controllers/FolkerKinzel.Tsltn.Controllers.csproj
+++ b/FolkerKinzel.Tsltn.Controllers/FolkerKinzel.Tsltn.Controllers.csproj
@@ -13,6 +13,10 @@
     <AssemblyVersion>1.3.0.0</AssemblyVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="FileWatcher.cs" />
+    <Compile Remove="HasContentChangedEventArgs.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\FolkerKinzel.Tsltn.Models\FolkerKinzel.Tsltn.Models.csproj" />
   </ItemGroup>
   <ItemGroup>
