--- a/Tsltn/Tsltn.csproj
+++ b/Tsltn/Tsltn.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <Compile Remove="IRecentFilesMenu.cs" />
     <Compile Remove="RecentFilesMenu.cs" />
+    <Compile Remove="TranslationErrorsEventArgs.cs" />
     <Compile Remove="TsltnPage.xaml.cs" />
     <Compile Remove="UntranslatedNodeEventArgs.cs" />
   </ItemGroup>
