--- a/FolkerKinzel.Tsltn.Controllers/FolkerKinzel.Tsltn.Controllers.csproj
+++ b/FolkerKinzel.Tsltn.Controllers/FolkerKinzel.Tsltn.Controllers.csproj
@@ -1,44 +1,34 @@
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWPF>true</UseWPF>
-    <NeutralLanguage>en</NeutralLanguage>
-    <Copyright>Copyright © 2020 Folker Kinzel</Copyright>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <EnableNETAnalyzers>true</EnableNETAnalyzers>
-    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-    <LangVersion>8.0</LangVersion>
-    <Nullable>enable</Nullable>
-    <FileVersion>1.3.0.17</FileVersion>
-    <AssemblyVersion>1.3.0.0</AssemblyVersion>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Remove="BadFileNameEventArgs.cs" />
-    <Compile Remove="FileController_Private.cs" />
-    <Compile Remove="FileWatcher.cs" />
-    <Compile Remove="HasContentChangedEventArgs.cs" />
-    <Compile Remove="MessageEventArgs.cs" />
-    <Compile Remove="NewFileNameEventArgs.cs" />
-    <Compile Remove="ShowFileDialogEventArgs.cs" />
-    <Compile Remove="UnusedTranslationEventArgs.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\FolkerKinzel.Tsltn.Models\FolkerKinzel.Tsltn.Models.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Update="Resources\Res.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Res.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Update="Resources\Res.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Res.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="if $(ConfigurationName) == Release if '$(TargetFramework)' == 'netcoreapp3.1' dotnet $(SolutionDir)IncVersion\IncVersion.dll $(ProjectDir)$(ProjectFileName) --revision" />
-  </Target>
+<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<LangVersion>8.0</LangVersion>
+		<Nullable>enable</Nullable>
+		<FileVersion>2.0.0.0</FileVersion>
+		<AssemblyVersion>2.0.0.0</AssemblyVersion>
+		<NeutralLanguage>en</NeutralLanguage>
+		<Copyright>Copyright © 2020 Folker Kinzel</Copyright>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	</PropertyGroup>
+	<ItemGroup>
+		<Compile Remove="Enums\**" />
+		<EmbeddedResource Remove="Enums\**" />
+		<None Remove="Enums\**" />
+		<Page Remove="Enums\**" />
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Remove="BadFileNameEventArgs.cs" />
+		<Compile Remove="FileController_Private.cs" />
+		<Compile Remove="FileWatcher.cs" />
+		<Compile Remove="HasContentChangedEventArgs.cs" />
+		<Compile Remove="MessageEventArgs.cs" />
+		<Compile Remove="NewFileNameEventArgs.cs" />
+		<Compile Remove="ShowFileDialogEventArgs.cs" />
+		<Compile Remove="UnusedTranslationEventArgs.cs" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\FolkerKinzel.Tsltn.Models\FolkerKinzel.Tsltn.Models.csproj" />
+	</ItemGroup>
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="if $(ConfigurationName) == Release if '$(TargetFramework)' == 'netcoreapp3.1' dotnet $(SolutionDir)IncVersion\IncVersion.dll $(ProjectDir)$(ProjectFileName) --revision" />
+	</Target>
 </Project>
