--- a/src/Reverser/Reverser.csproj
+++ b/src/Reverser/Reverser.csproj
@@ -9,8 +9,21 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="OneOf" Version="3.0.263" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="System.Diagnostics" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EditorConfigFiles Remove="C:\Users\fkinz\source\repos\Tsltn\src\Reverser\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="C:\Users\fkinz\source\repos\Tsltn\src\Reverser\.editorconfig" />
   </ItemGroup>
 
 </Project>
